--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,6 +44,13 @@ db.default.url="jdbc:postgresql://localhost:5432/cros-web"
 db.default.user=cros
 db.default.password="freddy"
 
+# Database testing:
+# ~~~~
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL"
+#db.default.logStatements=true
+#logger.com.jolbox=DEBUG
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
