--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ libraryDependencies += javaJdbc
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL"
 db.default.logStatements=true
-logger.com.jolbox=DEBUG
+#logger.com.jolbox=DEBUG
 
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
