Added logger configuration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,6 +82,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 akka {
-  loglevel="INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel="DEBUG"
 }
 
