--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,7 +73,7 @@ ebean.default="models.*"
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=ERROR
+logger.root=INFO
 
 # Logger used by the framework:
 logger.play=INFO
